--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "allowJs": true,
     "target": "ES2020",
     "module": "nodenext",
-    "moduleResolution": "nodenext"
+    "moduleResolution": "nodenext",
+	"skipLibCheck": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
